# pico-cpp

./: .gitignore  CMakeLists.txt  README.md  hello.cpp
.github/workflows/: build.yml
